--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>CarrieMail</h1>
+<p>Welcome to CarrieMail</p>
+Click here to see your mail: <% link_to "(Your Notes)", catalog_notes_path(@user.catalog)-%>
