--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -21,5 +21,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_note_path(@note) %> |
-<%= link_to 'Back', notes_path %>
+<%= link_to 'Edit', edit_catalog_note_path(@note) %> |
+<%= link_to 'Back', catalog_notes_path %>
