--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Welcome to CarrieMail</h1>
+<h2>Messages Sent</h2>
+<table>
+	<% @messages.each do |message| %>
+		<tr class="<%= cycle('list_line_odd', 'list_line_even')%>">
+			<td>
+				<dl>
+				<dt><%= message.title -%></dt>
+				<dt><%= message.body -%></dt>
+				</dl>
+			</td>
+			<td class="list_actions">
+				<%= link_to 'Show', message %><br/>
+				<%= link_to 'Edit', edit_message_path(message) %><br/>
+				<%= link_to 'Delete', message, :confirm => 'Are you sure?', :method=>:delete %>
+			</td>
+		</tr>
+	<% end %>
+</table>
+		
+				
