--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @note %> |
-<%= link_to 'Back', catalog_notes_path %>
+<%= link_to 'Show', [@catalog, @note] %> |
+<%= link_to 'Back', catalog_notes_path(@catalog) %>
