--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Listing notes</h1>
+<h1>Notes created by <%= current_user.name %></h1>
 
+<% if @catalog.notes.count > 0 %>
 <table>
   <tr>
     <th>Catalog</th>
@@ -17,13 +18,17 @@
     <td><%= note.title %></td>
     <td><%= note.body %></td>
     <td><%= note.recipient_id %></td>
-    <td><%= link_to 'Show', catalog_note_path(@catalog) %></td>
-    <td><%= link_to 'Edit', edit_catalog_note_path(@catalog) %></td>
-    <td><%= link_to 'Destroy', note, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Show', [@catalog, note] %></td>
+    <td><%= link_to 'Edit', edit_catalog_note_path(@catalog, note) %></td>
+    <td><%= link_to 'Destroy', [@catalog, note], :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
+<% else %>
+<p><%= current_user.name -%> Needs to create a note first!</p>
+<% end %>
 
 <%= link_to 'New Note', new_catalog_note_path(@catalog) %>
+<%= link_to 'Back', @catalog %>
