--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,10 +1,3 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>Catalog:</b>
-  <%= @note.catalog_id %>
-</p>
-
 <p>
   <b>Title:</b>
   <%= @note.title %>
@@ -21,5 +14,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_catalog_note_path(@note) %> |
-<%= link_to 'Back', catalog_notes_path %>
+<%= link_to 'Edit', edit_catalog_note_path(@catalog, @note) %> |
+<%= link_to 'Back', catalog_notes_path(@catalog) %>
