--- a/app/views/recipients/_form.html.erb
+++ b/app/views/recipients/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user, @recipient) do |f| %>
+<%= form_for([@user, @recipient]) do |f| %>
   <% if @recipient.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@recipient.errors.count, "error") %> prohibited this recipient from being saved:</h2>
@@ -12,44 +12,30 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :user_id %><br />
-    <%= f.text_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :note_id %><br />
-    <%= f.text_field :note_id %>
-  </div>
-  <div class="field">
-    <%= f.label :first_name %><br />
+    <%= f.label :first_name %>
     <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_area :last_name %>
+    <%= f.label :last_name %>
+    <%= f.text_field :last_name %>
   </div>
   <div class="field">
     <%= f.label :street %><br />
-    <%= f.text_area :street %>
+    <%= f.text_field :street %>
   </div>
   <div class="field">
     <%= f.label :addr_line2 %><br />
-    <%= f.text_area :addr_line2 %>
+    <%= f.text_field :addr_line2 %>
   </div>
   <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_area :city %>
-  </div>
-  <div class="field">
-    <%= f.label :state %><br />
-    <%= f.text_area :state %>
-  </div>
-  <div class="field">
-    <%= f.label :zip %><br />
-    <%= f.text_area :zip %>
+    <%= f.label :city %>
+    <%= f.text_field :city %>
+    <%= f.label :state %>
+    <%= f.text_field :state %>
+    <%= f.label :zip %>
+    <%= f.text_field :zip %>
   </div>
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.text_area :email %>
+    <%= f.text_field :email %>
   </div>
   <div class="actions">
     <%= f.submit %>
