--- a/app/views/recipients/show.html.erb
+++ b/app/views/recipients/show.html.erb
@@ -1,15 +1,3 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <b>User:</b>
-  <%= @recipient.user_id %>
-</p>
-
-<p>
-  <b>Note:</b>
-  <%= @recipient.note_id %>
-</p>
-
 <p>
   <b>First name:</b>
   <%= @recipient.first_name %>
@@ -51,5 +39,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_recipient_path(@recipient) %> |
-<%= link_to 'Back', recipients_path %>
+<%= link_to 'Edit', edit_user_recipient_path(@recipient) %> |
+<%= link_to 'Back', user_recipients_path(@users) %>
