--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,12 @@
-<h1>CarrieMail</h1>
-<p>Welcome to CarrieMail</p>
+<div class="header"><h1>CarrieMail</h1></div>
+<div><h2>Welcome to CarrieMail</h2>
+<h2>Get Started!  <%= link_to "Send a letter", new_catalog_note_path(current_user.catalog) -%></h2>
+</div>
+<div class="boxed">
 <h2>Recent Notes Sent</h2>
 Click here to see your mail: <%= link_to "(Your Notes)", catalog_notes_path(current_user.catalog)-%>
+</div>
+<div class="boxed">
 <h2>Address Book</h2>
 Click here to manage your addresses: <%= link_to "(Your Addresses)", user_recipients_path(current_user)%>
+</div>
