--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -18,7 +18,7 @@
     <td><%= note.title %></td>
     <td><%= note.body %></td>
     <td><%= note.recipient_id %></td>
-    <td><%= link_to 'Show', [@catalog, note] %></td>
+    <td><%= link_to 'HTML', [@catalog, note] %>|<%= link_to 'PDF', catalog_note_path(@catalog, note, :format=>"pdf") -%></td>
     <td><%= link_to 'Edit', edit_catalog_note_path(@catalog, note) %></td>
     <td><%= link_to 'Destroy', [@catalog, note], :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
