generate PDF with script font now

--- a/app/views/notes/show.pdf.erb
+++ b/app/views/notes/show.pdf.erb
@@ -1,4 +1,4 @@
-<div id="container">
+<div style="font-family: 'Monotype Corsiva',cursive;font-size: 18pt;" id="container">
 <p>
 Dear <%= @note.recipient_id-%>,
 </p>
