--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,18 @@
+<% content_for :head do %>
+  <%= javascript_include_tag "contentflow.js" %>
+<% end %>
+<% content_for :stylesheet_includes do %>
+  <%= stylesheet_link_tag "contentflow.css" %>
+<% end %>
+	
+<div id="hero" class="ContentFlow">
+	<div id ="imgFlow" class="flow">
+		<%= image_tag("homer.jpeg", :class => 'item') %>
+		<%= image_tag("bart.jpeg", :class => 'item') %>
+		<%= image_tag("lisa.jpeg", :class => 'item') %>
+	</div>
+</div><!--#hero-->
+
 <h1>Welcome to CarrieMail</h1>
 <h2>Messages Sent</h2>
 <table>
