--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CarrieMail</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
+  <%= yield(:head) -%>
   <%= csrf_meta_tag %>
+  <title>CarrieMail</title>
+
 </head>
 <body>
-	<ul class="hmenu">
-		<%= render 'devise/menu/registration_items' %>
-		<%= render 'devise/menu/login_items' %>
-		<%= link_to 'Home', root_path %>
-		<%= link_to 'Messages', messages_path %>
-	</ul>
+	<header>
+		<div id="logo">
+
+		</div><!--#logo-->
+		<div id="utility-nav">
+			<ul class="hmenu">
+				<%= render 'devise/menu/registration_items' %>
+				<%= render 'devise/menu/login_items' %>
+				<%= link_to 'Home', root_path %>
+				<%= link_to 'Messages', messages_path %>
+			</ul>
+		</div><!--#utility-nav-->
+	</header><!--#header-->
 		
 	<p style="color: green"><%= notice %></p>
 	<p style="color: red"><%= alert %></p>
