--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,24 +1,45 @@
-<h2>Sign up</h2>
+<div id="signup">
+	<h2>Sign up</h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <p><%= f.label :first_name %><br />
-  <%= f.text_field :first_name %></p>
-
-  <p><%= f.label :last_name %><br />
-  <%= f.text_field :last_name %></p>
-
-  <p><%= f.label :email %><br />
-  <%= f.text_field :email %></p>
-
-  <p><%= f.label :password %><br />
-  <%= f.password_field :password %></p>
-
-  <p><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></p>
-
-  <p><%= f.submit "Sign up" %></p>
-<% end %>
-
-<%= render :partial => "devise/shared/links" %>
+	<div id="carrie_img" class="l">
+		<%= image_tag("homer.jpeg") %>
+		
+	</div><!--#carrie_img-->
+	
+	<div class="form l">
+		<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+		  <%= devise_error_messages! %>
+		
+		  <!--<%= f.label :first_name %><br />-->
+		  <p><%= f.text_field :first_name, :placeholder => 'First Name' %></p>
+		  <p><%= f.text_field :last_name, :placeholder => 'Last Name' %></p>
+		  <p><%= f.text_field :email, :placeholder => 'Email Address' %></p>
+		  <p><%= f.password_field :password, :placeholder => 'Password' %></p>
+		  <p><%= f.password_field :password_confirmation, :placeholder => 'Password Confirmation' %></p>
+	
+	</div><!--.form-->
+	<div class="form">
+		<p>Choose a pricing plan</p>
+		  <p><%= f.radio_button :package_choice, 'basic', :checked => true %>
+		  <%= label :package_choice_basic, 'Basic' %></p>
+		  <p><%= f.radio_button :package_choice, 'premium' %>
+		  <%= label :package_choice_basic, 'Premium' %></p>
+		  <p><%= f.radio_button :package_choice, 'free' %>
+		  <%= label :package_choice_basic, 'Free' %></p>
+		
+	</div>
+	<div class="clr"></div>
+	<div class="center">
+		  <p><%= f.submit "Sign up" %></p>
+   		  <% end %>
+	</div>
+	<div class="clr"></div>
+	<%= render 'layouts/testimonials' %>
+	<%= render 'layouts/promo-signup' %>
+	
+	
+	<!--<div id="shared-links" class="l">
+		<%= render :partial => "devise/shared/links" %>
+	</div>-->
+	
+</div><!--#signup-->
