--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,30 +3,30 @@
 <head>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
-  <%= yield(:head) -%>
+  <%= javascript_include_tag "jquery.js" %>
+
+  <%= yield(:home) -%>
   <%= csrf_meta_tag %>
   <title>CarrieMail</title>
 
 </head>
 <body>
-	<header>
-		<div id="logo">
+	<div id="main">
+		<header>
+			<%= render 'devise/menu/header_items' %>
+		</header><!--#header-->
+		<div class="clr"></div>
+		<div id="container">
+			<p style="color: green"><%= notice %></p>
+			<p style="color: red"><%= alert %></p>
 
-		</div><!--#logo-->
-		<div id="utility-nav">
-			<ul class="hmenu">
-				<%= render 'devise/menu/registration_items' %>
-				<%= render 'devise/menu/login_items' %>
-				<%= link_to 'Home', root_path %>
-				<%= link_to 'Messages', messages_path %>
-			</ul>
-		</div><!--#utility-nav-->
-	</header><!--#header-->
-		
-	<p style="color: green"><%= notice %></p>
-	<p style="color: red"><%= alert %></p>
-
-<%= yield %>
-
+			<%= yield %>
+			
+			<div class="clr"></div>
+			<div id="footer">
+				<%= render 'devise/menu/footer_items' %>
+			</div>
+		</div><!--#container-->
+	</div><!--#main-->
 </body>
 </html>
