--- a/public/stylesheets/carriemail.css
+++ b/public/stylesheets/carriemail.css
@@ -1,3 +1,30 @@
+/*////////////////////////////
+ Site-wide Styling 
+////////////////////////////*/
+.clr {
+	clear:both;
+}
+.l {
+	float:left;
+}
+.r {
+	float:right;
+}
+.center {
+	text-align:center;
+}
+.h-list ul {
+	list-style-type:none;
+}
+.h-list li {
+	display:inline;
+	border-right: 1px solid #000;
+	padding:0 10px;
+}
+.form {
+	margin:0 20px;
+}
+
 ul.hmenu {
   list-style: none;	
   margin: 0 0 2em;
@@ -7,3 +34,47 @@ ul.hmenu {
 ul.hmenu li {
   display: inline;  
 }
+
+header {
+	width:100%;
+}
+
+#logo {
+	float:left;
+}
+#utility-nav {
+	float:right;
+}
+#main {
+	width:960px;
+	margin:0 auto;
+}
+
+/*////////////////////////////
+ Container
+////////////////////////////*/
+.minor-boxes {
+	width:468px;
+	border:1px solid #000;
+	height:50px;
+}
+#testimonials {
+	margin: 25px 10px 10px 0;
+}
+
+#promo-signup {
+	margin:25px 0px 10px 10px;
+}
+
+
+/*////////////////////////////
+ Coverflow Styling 
+////////////////////////////*/
+
+#CoverFlow {
+	border:1px solid #000;
+}
+
+/*////////////////////////////
+ Footer Styling 
+////////////////////////////*/
