--- a/app/views/layouts/_promo-signup.html.erb
+++ b/app/views/layouts/_promo-signup.html.erb
@@ -1,6 +1,3 @@
 <div id="promo-signup" class="l minor-boxes center">
-	<form>
-		<input type="text" name="dummy" placeholder="Pricing plans, contact information, details" size="60" /><br/>
-		<input type="submit" value="Sign Up!" />
-	</form>
+	<p>Pricing plans</p>
 </div>
