--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,6 +21,18 @@
   <p><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
   <%= f.password_field :current_password %></p>
 
+	<div class="form">
+		<p>Choose a pricing plan</p>
+		  <p><%= f.radio_button :package_choice, '0', :checked => true%>
+		  <%= label :package_choice, 'Basic' %></p>
+		  <p><%= f.radio_button :package_choice, '1' %>
+		  <%= label :package_choice, 'Premium' %></p>
+		  <p><%= f.radio_button :package_choice, '2' %>
+		  <%= label :package_choice, 'Free' %></p>
+		
+	</div>
+
+
   <p><%= f.submit "Update" %></p>
 <% end %>
 
