--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -6,9 +6,9 @@
 <h2>Recent Note</h2>
 <table>
   <tr>
-    <th>Date Created</th>
-    <th>Title</th>
-    <th>Sent To (could be many)</th>
+    <th>Created</th>
+    <th>Description</th>
+    <th>Sent To</th>
     <th>Status</th>
     <th></th>
     <th></th>
@@ -18,8 +18,8 @@
   <tr class="<%= cycle("even", "odd") %>">
     <td><%= note.created_at.strftime("%m/%d/%y") %></td>
     <td><%= note.title %></td>
-    <td><%= note.recipient_id %></td>
-    <td>Status goes here</td>
+    <td><%= note.recipient.name %></td>
+    <td><%= note.status_description %></td>
     <td><%= link_to 'HTML', [@catalog, note] %> | <%= link_to 'PDF', catalog_note_path(@catalog, note, :format=>"pdf") -%></td>
     <td>| <%= link_to 'Edit', edit_catalog_note_path(@catalog, note) %></td>
     <td>| <%= link_to 'Delete', [@catalog, note], :confirm => 'Are you sure?', :method => :delete %></td>
