--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -12,16 +12,17 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br />
+    <%= f.label :title, "Subject" %><br />
     <%= f.text_field :title %>
+  </div>
+  <div class="field">
+    <%= f.label :recipient_id, "To:" %><br />
+	<%= f.select :recipient_id, current_user.recipients.find(:all).collect {|r| [r.name, r.id]} -%>
+	<%= link_to "New Contact", new_user_recipient_path(@current_user)-%>
   </div>
   <div class="field">
     <%= f.label :body %><br />
     <%= f.text_area :body %>
-  </div>
-  <div class="field">
-    <%= f.label :recipient_id %><br />
-    <%= f.text_field :recipient_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
