--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -2,17 +2,14 @@
   <b>Title:</b>
   <%= @note.title %>
 </p>
-
+<p>
+  <b>Addressed to:</b>
+  <%= @note.recipient.name %>
+</p>
 <p>
   <b>Body:</b>
   <%= @note.body %>
 </p>
-
-<p>
-  <b>Recipient:</b>
-  <%= @note.recipient_id %>
-</p>
-
 
 <%= link_to 'Edit', edit_catalog_note_path(@catalog, @note) %> |
 <%= link_to 'Back', catalog_notes_path(@catalog) %>
