--- a/app/views/recipients/_form.html.erb
+++ b/app/views/recipients/_form.html.erb
@@ -29,7 +29,7 @@
     <%= f.label :city %>
     <%= f.text_field :city %>
     <%= f.label :state %>
-    <%= f.text_field :state %>
+	<%= f.select :state, Carmen::states %>
     <%= f.label :zip %>
     <%= f.text_field :zip %>
   </div>
