--- a/app/views/recipients/edit.html.erb
+++ b/app/views/recipients/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', [@recipient, @users] %> |
+<%= link_to 'Show', [@user, @recipient] %> |
 <%= link_to 'Back', user_recipients_path(@recipients) %>
