--- a/app/views/recipients/index.html.erb
+++ b/app/views/recipients/index.html.erb
@@ -11,6 +11,7 @@
     <th>State</th>
     <th>Zip</th>
     <th>Email</th>
+	<th>Number of Letters</th>
     <th></th>
     <th></th>
     <th></th>
@@ -26,6 +27,7 @@
     <td><%= recipient.state %></td>
     <td><%= recipient.zip %></td>
     <td><%= recipient.email %></td>
+	<td><%= link_to recipient.notes.count, catalog_notes_path(@user.catalog) -%></td>
     <td><%= link_to 'Show', [@user, recipient] %></td>
     <td><%= link_to 'Edit', edit_user_recipient_path(@user, recipient) %></td>
     <td><%= link_to 'Destroy', [@user, recipient], :confirm => 'Are you sure?', :method => :delete %></td>
@@ -35,8 +37,7 @@
 
 <br />
 <% else %>
-<p>Click 'New Address' below to begin adding names</p>
+<p>Click 'New Contact' below to begin adding names</p>
 <% end %>
 
-<%= link_to 'New Address', new_user_recipient_path(@user) %>
-<%= link_to 'Back', @user -%>
+<%= link_to 'New Contact', new_user_recipient_path(@user) %>
