updated doc to print Dear <name> when generating PDF

--- a/app/views/notes/show.pdf.erb
+++ b/app/views/notes/show.pdf.erb
@@ -1,6 +1,6 @@
 <div style="font-family: 'Monotype Corsiva',cursive;font-size: 18pt;" id="container">
 <p>
-Dear <%= @note.recipient_id-%>,
+Dear <%= @note.recipient.name-%>,
 </p>
 <p>
   <%= @note.body %>
