--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title, "Subject" %><br />
+    <%= f.label :title, "Subject:" %><br />
     <%= f.text_field :title %>
   </div>
   <div class="field">
