fixed issue with updating notes, and modified create note workflow

--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -25,6 +25,6 @@
     <%= f.text_area :body %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Preview" %>
   </div>
 <% end %>
