--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', [@catalog, @note] %> |
-<%= link_to 'Back', catalog_notes_path(@catalog) %>
+<%= link_to 'All Notes', catalog_notes_path(@catalog) %>
