--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Send a Friendly Message</h1>
+<h1>Send a Professional Handwritten Note</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', catalog_notes_path(@catalog) %>
+<%= link_to 'All Notes', catalog_notes_path(@catalog) %>
