--- a/app/views/notes/show.pdf.erb
+++ b/app/views/notes/show.pdf.erb
@@ -1,27 +1,28 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <link href="http://fonts.googleapis.com/css?family=La+Belle+Aurore&amp;v1" rel="stylesheet" type="text/css"/>
-  <style>
+	<link href="http://fonts.googleapis.com/css?family=La+Belle+Aurore&amp;v1" rel="stylesheet" type="text/css"/>
+	<style>
 
-.mail {
-	font-family: 'La Belle Aurore', arial, serif;
-	font-size: 18pt;
-	color: #a7a7a7;
-}
-.salutation {
-	font-family: 'La Belle Aurore', arial, serif;
-	font-size: 20pt;
-	color: #a7a7a7;
-}
-.signature {
-	font-family: 'La Belle Aurore', arial, serif;
-	font-size: 20pt;
-	color: #a7a7a7;
-}
+	.mail {
+		font-family: 'La Belle Aurore', arial, serif;
+		font-size: 18pt;
+		/* color: #a7a7a7; */
+	}
+	.salutation {
+		font-family: 'La Belle Aurore', arial, serif;
+		font-size: 20pt;
+		/* color: #a7a7a7; */
+	}
+	.signature {
+		font-family: 'La Belle Aurore', arial, serif;
+		font-size: 20pt;
+		/* color: #a7a7a7; */
+	}
 
-  </style>
-  <title>Carriemail</title>
+	</style>
+
+	<title>Carriemail</title>
 </head>
 <body>
 	<%= render 'letter.html' %>
