--- a/app/views/layouts/_testimonials.html.erb
+++ b/app/views/layouts/_testimonials.html.erb
@@ -1,4 +1,4 @@
 <div id="testimonials" class="l minor-boxes center">
-	<p>Testimonials go here</p>
-	<p class="quote"></p>
+	<div>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</div>
+	<div class="quote"></div>
 </div>
