--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing note</h1>
+<h2>Send a Professional Hand-written Note</h2>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', [@catalog, @note] %> |
-<%= link_to 'All Notes', catalog_notes_path(@catalog) %>
