--- a/app/views/layouts/_carrie-image.html.erb
+++ b/app/views/layouts/_carrie-image.html.erb
@@ -1,3 +1,3 @@
 <div id="carrie_img" class="l">
-	<%= image_tag("homer.jpeg") %>
+	<%= image_tag("CarriemailBasketLogo.jpg") %>
 </div><!--#carrie_img-->
