--- a/app/views/layouts/_promo-signup.html.erb
+++ b/app/views/layouts/_promo-signup.html.erb
@@ -1,3 +1,3 @@
 <div id="promo-signup" class="l minor-boxes center">
-	<p>Pricing plans</p>
+	<span><%= link_to 'Get Started Today!', new_user_registration_path %> </span>
 </div>
