--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -12,17 +12,16 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title, "Subject:" %><br />
-    <%= f.text_field :title %>
+    <%= f.text_field :title, :placeholder => "Subject of the letter"%>
   </div>
   <div class="field">
-    <%= f.label :recipient_id, "To:" %><br />
-	<%= f.select :recipient_id, current_user.recipients.find(:all).collect {|r| [r.name, r.id]} -%>
-	<%= link_to "New Contact", new_user_recipient_path(@current_user)-%>
+    <%= f.label :recipient_id, "Dear " %>
+	<%= f.select :recipient_id, @recipients -%>
+	<%= link_to "Create a New Contact", new_user_recipient_path(@current_user)-%>
   </div>
   <div class="field">
-    <%= f.label :body %><br />
-    <%= f.text_area :body %>
+	<p><em></em></p>
+    <%= f.text_area :body, :placeholder => "Type in the text of your message here.  We'll print it on a 3x5 card and sent it off for you!"%>
   </div>
   <div class="actions">
     <%= f.submit "Preview" %>
