--- a/app/views/recipients/index.html.erb
+++ b/app/views/recipients/index.html.erb
@@ -7,6 +7,7 @@
     <th>Address</th>
     <th>Email</th>
 	<th>Notes</th>
+	<th></th>
     <th></th>
     <th></th>
     <th></th>
@@ -18,9 +19,10 @@
     <td><%= recipient.full_address %></td>
     <td><%= recipient.email %></td>
 	<td align="center"><%= link_to recipient.notes.count, catalog_notes_path(@user.catalog, :recipient_id => recipient.id) -%></td>
+	<td><%= link_to 'Send Note', new_catalog_note_path(@user.catalog, :recipient_id => recipient.id)%>
     <td><%= link_to 'Show', [@user, recipient] %></td>
     <td><%= link_to 'Edit', edit_user_recipient_path(@user, recipient) %></td>
-    <td><%= link_to 'Destroy', [@user, recipient], :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Delete', [@user, recipient], :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
