--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 			<%= yield %>
 			
 			<div class="clr"></div>
-			<div id="footer">
+			<div class="l" id="footer">
 				<%= render 'devise/menu/footer_items' %>
 			</div>
 		</div><!--#container-->
