--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Send a Professional Hand-written Note</h2>
+<div class="mail"><p>Send a Professional Hand-written Note</p></div>
 
 <%= render 'form' %>
 
