--- a/app/views/notes/show.pdf.erb
+++ b/app/views/notes/show.pdf.erb
@@ -7,14 +7,17 @@
 	.mail {
 		font-family: 'La Belle Aurore', arial, serif;
 		font-size: 18pt;
+		margin:.5em;
 	}
 	.salutation {
 		font-family: 'La Belle Aurore', arial, serif;
 		font-size: 20pt;
+		margin:.5em;
 	}
-	.signature {
+	.signature p {
 		font-family: 'La Belle Aurore', arial, serif;
 		font-size: 20pt;
+		margin:.5em;
 	}
 
 	</style>
