--- a/app/views/recipients/edit.html.erb
+++ b/app/views/recipients/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Change information about a contact in your address book</h1>
+<div class="mail"><p>Change information about a contact in your address book</p></div>
 
 <%= render 'form' %>
 
