--- a/app/views/recipients/new.html.erb
+++ b/app/views/recipients/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Add a contact to your address book</h1>
+<div class="mail"><p>Add a contact to your address book</p></div>
 
 <%= render 'form' %>
 
