--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Send a Professional Handwritten Note</h1>
+<div class="mail"><p>Send a Professional Handwritten Note</p></div>
 
 <%= render 'form' %>
 
