--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,5 +1,5 @@
-<h1><%= @note.title %> </h1>
-
+<div class="l"><p><%= @note.title %> </p></div>
+<div class="clr"></div>
 <%= render 'letter' -%>
 
 <%= button_to 'Send This Note!', generate_pdf_catalog_note_path(:catalog_id => @catalog, :note_id => @note) %>
