--- a/app/views/recipients/_form.html.erb
+++ b/app/views/recipients/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@user, @recipient]) do |f| %>
+<%= form_for([@user, @recipient], :html => {:multipart => true}) do |f| %>
   <% if @recipient.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@recipient.errors.count, "error") %> prohibited this recipient from being saved:</h2>
@@ -28,6 +28,10 @@
   </div>
   <div class="field">
     <%= f.text_field :email, :placeholder => 'Email', :size => 45 %>
+  </div>
+  <div class="field">
+	<%= f.label :photo, "Photo"-%>
+	<%= f.file_field :photo -%>
   </div>
   <div class="actions">
     <%= f.submit 'Create Contact' %>
