--- a/public/stylesheets/carriemail.css
+++ b/public/stylesheets/carriemail.css
@@ -17,7 +17,9 @@ pre {
 
 a { color: #000; }
 a:visited { color: #666; }
-a:hover { color: #fff; background-color:#000; }
+a:hover { 
+	color: #111;
+}
 
 div.field, div.actions {
   margin-bottom: 10px;
