--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= javascript_include_tag "jquery.js" %>
+  <%= javascript_include_tag "jquery-ui.js" %>
+  <%= javascript_include_tag "script.js" %>
   <%= csrf_meta_tag %>
   
 <%= yield(:home) -%>
